--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:   # <-- OBLIGATOIRE
     needs: docker
     steps:
       - uses: actions/checkout@v3
-      - run: echo "${{ secrets.Sugitha17! }}" | docker login -u "${{ secrets.Sugitha }}" --password-stdin
+      - run: echo "${{ secrets.Sugitha17! }" | docker login -u "${{ secrets.Sugitha }" --password-stdin
       - run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/weather-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/weather-app:latest
