--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,5 +1,3 @@
-# add github action for gitlab actions
-
 name: CI météo
 
 on:
@@ -53,7 +51,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login Docker
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Build et push image Docker
         run: |
