--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:   # permet de lancer le workflow à la main depuis GitHub
+  workflow_dispatch:   # permet aussi de lancer manuellement le workflow
 
 jobs:
   test:
@@ -57,3 +57,4 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/weather-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/weather-app:latest
+``
