--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:   # permet aussi de lancer manuellement le workflow
+  workflow_dispatch:
 
 jobs:
   test:
@@ -32,7 +32,7 @@ jobs:
   docker:
     name: Build Docker
     runs-on: ubuntu-latest
-    needs: test   # ne s'exécute que si les tests passent
+    needs: test
 
     steps:
       - name: Récupérer le code
@@ -44,7 +44,7 @@ jobs:
   push-docker:
     name: Push Docker Hub
     runs-on: ubuntu-latest
-    needs: docker   # ne s'exécute que si build Docker OK
+    needs: docker
 
     steps:
       - name: Récupérer le code
@@ -53,8 +53,4 @@ jobs:
       - name: Login Docker
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Build et push image Docker
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/weather-app:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/weather-app:latest
-``
+      - name: Build et push image Dock
