--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,56 +1,37 @@
-name: CI météo
-
 on:
   push:
-    branches: [ main ]
+    branches: [ test ]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ test ]
 
 jobs:
   test:
-    name: Tests unitaires
     runs-on: ubuntu-latest
-
     steps:
-      - name: Récupérer le code
-        uses: actions/checkout@v3
-
-      - name: Installer Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-
-      - name: Installer les dépendances
-        run: |
-          pip install -r requirements.txt
-          pip install pytest
-
-      - name: Lancer les tests
-        run: PYTHONPATH=. pytest
+      - run: pip install -r requirements.txt
+      - run: PYTHONPATH=. pytest
 
   docker:
-    name: Build Docker
     runs-on: ubuntu-latest
     needs: test
-
     steps:
-      - name: Récupérer le code
-        uses: actions/checkout@v3
-
-      - name: Construire l’image Docker
-        run: docker build -t weather-app .
+      - uses: actions/checkout@v3
+      - run: docker build -t weather-app .
 
   push-docker:
-    name: Push Docker Hub
     runs-on: ubuntu-latest
     needs: docker
-
     steps:
-      - name: Récupérer le code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Login Docker
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Build et push image Dock
+      - name: Build et push image Docker
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/weather-app:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/weather-app:latest
