--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI - Weather App
 
 on:
   push:
-    branches: [ "test" ]
+    branches: ["test" ]   # tu peux changer selon ton besoin
   pull_request:
-    branches: [ "test" ]
+    branches: ["test" ]
 
 jobs:
   build-and-test:
@@ -19,7 +19,7 @@ jobs:
       - name: Installer Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"  
+          python-version: "3.11"
 
       # Étape 3 : installer les dépendances
       - name: Installer les dépendances
@@ -27,10 +27,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Étape 4 : exécuter les tests (pytest)
+      # Étape 4 : lancer les tests avec le bon PYTHONPATH
       - name: Lancer les tests unitaires
-        run: pytest -v
+        run: |
+          export PYTHONPATH="${{ github.workspace }}"
+          pytest -v
 
       # Étape 5 (optionnelle) : lancer ton script météo
       - name: Exécuter le script météo
-        run: python main.py
+        run: |
+          export PYTHONPATH="${{ github.workspace }}"
+          python main.py
+        env:
+          API_KEY: ${{ secrets.WEATHER_API_KEY }}
